--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">jagalchi</string>
-    <string name="init_string">"TenToOne - 스크린샷을 모아 공유해 보세요"</string>
+    <string name="capture_count">장</string>
+    <string name="init_string">TenToOne - 스크린샷을 모아 공유해 보세요</string>
+    <string name="exit_string">TenToOne - 앱을 종료합니다</string>
     <string name="capture_no_content">사진을 캡쳐해주세요</string>
-    <string name="reset_success">리셋을 완료했습니다.</string>
+    <string name="reset_success">리셋을 완료했습니다</string>
     <string name="reset_fail">리셋을 실패했습니다. 다시 시도해 주세요</string>
-    <string name="save_success">갤러리에 저장하였습니다.</string>
+    <string name="save_success">갤러리에 저장하였습니다</string>
     <string name="save_fail">저장을 실패했습니다. 다시 시도해 주세요</string>
     <string name="share_string">TenToOne-합쳐진 이미지를 공유할 수 있습니다</string>
     <string name="share_pressbtn_pless">공유하시려면 공유 아이콘을 눌러주세요</string>
