--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">jagalchi</string>
     <string name="capture_count">장</string>
-    <string name="init_string">TenToOne - 스크린샷을 모아 공유해 보세요</string>
-    <string name="exit_string">TenToOne - 앱을 종료합니다</string>
+    <string name="init_app">TenToOne - 스크린샷을 모아 공유해 보세요</string>
+    <string name="exit_app">TenToOne - 앱을 종료합니다</string>
+    <string name="exit_reset_app">TenToOne - 캡쳐된 파일을 삭제하고 앱을 종료합니다.</string>
+    <string name="exception_occur">에러가 발생했습니다.</string>
+    <string name="exception_out_of_memory">합칠수 있는 이미지의 용량을 초과했습니다.</string>
     <string name="capture_no_content">사진을 캡쳐해주세요</string>
     <string name="reset_success">리셋을 완료했습니다</string>
     <string name="reset_fail">리셋을 실패했습니다. 다시 시도해 주세요</string>
