--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,15 +4,30 @@
     <string name="init_app">TenToOne - 스크린샷을 모아 공유해 보세요</string>
     <string name="exit_app">TenToOne - 앱을 종료합니다</string>
     <string name="exit_reset_app">TenToOne - 캡쳐된 파일을 삭제하고 앱을 종료합니다.</string>
+
     <string name="exception_occur">에러가 발생했습니다.</string>
     <string name="exception_out_of_memory">합칠수 있는 이미지의 용량을 초과했습니다.</string>
+
     <string name="capture_no_content">사진을 캡쳐해주세요</string>
+
     <string name="reset_success">리셋을 완료했습니다</string>
     <string name="reset_fail">리셋을 실패했습니다. 다시 시도해 주세요</string>
+
     <string name="save_success">갤러리에 저장하였습니다</string>
     <string name="save_fail">저장을 실패했습니다. 다시 시도해 주세요</string>
+
     <string name="share_string">TenToOne-합쳐진 이미지를 공유할 수 있습니다</string>
     <string name="share_pressbtn_pless">공유하시려면 공유 아이콘을 눌러주세요</string>
     <string name="share_success"></string>
     <string name="share_fail"></string>
+
+    <string name="ga_category_action">Action</string>
+    <string name="ga_action_capture_capturing">Capturing</string>
+    <string name="ga_action_capture_save">Save</string>
+    <string name="ga_action_capture_delete">Delete</string>
+    <string name="ga_action_capture_oom_capture">OutOfMemory Capture</string>
+
+    <string name="ga_category_run">Run</string>
+    <string name="ga_action_run_start">Start</string>
+    <string name="ga_action_run_stop">Stop</string>
 </resources>
