show contentIntent combined image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">jagalchi</string>
+    <string name="app_name">TenToOne</string>
     <string name="capture_count">장</string>
     <string name="init_app">TenToOne - 스크린샷을 모아 공유해 보세요</string>
     <string name="exit_app">TenToOne - 앱을 종료합니다</string>
