--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,10 @@
     <string name="reset_success">리셋을 완료했습니다</string>
     <string name="reset_fail">리셋을 실패했습니다. 다시 시도해 주세요</string>
 
+    <string name="undo_success">되돌리기를 성공했습니다</string>
+    <string name="undo_fail">되돌리기를 실패했습니다. 다시 시도해 주세요</string>
+    <string name="undo_limit">되돌릴수 있는 이미지가 없습니다</string>
+
     <string name="save_success">갤러리에 저장하였습니다</string>
     <string name="save_fail">저장을 실패했습니다. 다시 시도해 주세요</string>
 
