--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">텐투원</string>
-    <string name="init_app">자동으로 이미지가 합쳐집니다</string>
+    <string name="init_app">자동으로 이미지를 모아줍니다.</string>
     <string name="capture_do">캡쳐를 시작해보세요</string>
-    <string name="capture_count_text">장이 합쳐짐</string>
-    <string name="capture_view">사진을 보려면 누르세요</string>
+    <string name="capture_count_text">장이 모였습니다</string>
+    <string name="capture_view">모아진 사진을 보려면 누르세요</string>
 
-    <string name="file_writing">파일을 쓰는중입니다. 잠시후에 실행 주세요</string>
+    <string name="file_writing">사진을 모으는 중입니다. 잠시후에 실행 주세요</string>
     <string name="reset_description">지우기</string>
-    <string name="undo_description">되돌</string>
+    <string name="undo_description">되돌리기</string>
     <string name="save_description">저장</string>
     <string name="exit_description">종료</string>
 
